# linux-learning-stage2

./: .gitignore  CMakeLists.txt  can_feedback_decoder.cpp  can_frame_demo.cpp  cpp_motor_status.cpp  debug_null_motor.c  file_descriptor_demo.cpp  main.c  motor_command.cpp  motor_command.hpp  motor_command_frame.cpp  motor_command_safety_demo.cpp  motor_command_test.cpp  motor_command_watchdog.cpp  motor_command_watchdog.hpp  motor_command_watchdog_demo.cpp  motor_command_watchdog_test.cpp  motor_feedback.cpp  motor_feedback.hpp  motor_protocol.cpp  motor_protocol.hpp  motor_units.c  sanitizer_demo.cpp  serial_frame_reader_demo.cpp  serial_loopback_demo.cpp  serial_termios_demo.cpp  socketcan_command_demo.cpp  socketcan_feedback_demo.cpp  socketcan_loopback_demo.cpp  socketcan_periodic_command_demo.cpp  socketcan_safe_shutdown_demo.cpp  socketcan_watchdog_command_demo.cpp
cpp_motor_monitor/: CMakeLists.txt
cpp_motor_monitor/include/: motor.hpp
cpp_motor_monitor/src/: main.cpp  motor.cpp
cpp_motor_monitor/tests/: motor_test.cpp
motor_monitor/: CMakeLists.txt  Makefile
motor_monitor/include/: motor.h
motor_monitor/src/: main.c  motor.c
